[project]
requires-python = ">=3.6"
dependencies = [
  'numpy>=1.19.5',
]

[project.optional-dependencies]
tests = [
  'pytest>=6',
]

[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "cmake>=3.21",
  "scikit-build>=0.12",
  "ninja",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = "Test*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.cibuildwheel]
build = "cp3*-*"
skip = ["cp35-*", "*-win32", "*-manylinux_i686", "*-arm64", "*-universal2"]
test-requires = "numpy>=1.19.5 pytest>6"
test-command = "pytest {project}/tests"
